# cuda_basics

./: .gitignore  CMakeLists.txt  README.md  ch4.2.cu  ch4.cu  ch5.2.cu  main.cu
chapter4/: CMakeLists.txt  ch4.2.cu  ch4.cu
chapter5/: CMakeLists.txt  ch5.2.cu  ch5.3.cu  gpu_ripple.cu
common/: cpu_anim.h
